kubernetes/apps/observability/grafana-operator/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: grafana-operator
      app.kubernetes.io/name: grafana-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9090
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - port: 3000
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-operator-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: grafana-operator
      app.kubernetes.io/name: grafana-operator
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: grafana.com
              - matchName: raw.githubusercontent.com
              - matchName: grafana-service
              - matchName: grafana-service.observability
              - matchName: grafana-service.observability.svc
              - matchName: grafana-service.observability.svc.cluster.local
    - toFQDNs:
        - matchName: grafana.com
        - matchName: raw.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
